# cryptotry

./: .gitignore  README.md  ai.py  info.py  main.py  pyproject.toml  rabby_automation.py  record.py  replay.py  undetected.py
chrome_profiles/my_profile/: CrashpadMetrics-active.pma  Local State  metadata.json
chrome_profiles/my_profile/Default/: AggregationService  BrowsingTopicsSiteData  BrowsingTopicsState  Conversions  DIPS  Favicons  History  History-journal  MediaDeviceSalts  Network Action Predictor  Preferences  PrivateAggregation  Secure Preferences  SharedStorage  Shortcuts  Top Sites  Visited Links  Web Data
chrome_profiles/my_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  index
chrome_profiles/my_profile/GraphiteDawnCache/: data_1  index
chrome_profiles/my_profile/Safe Browsing/: ChromeExtMalware.store  ChromeExtMalware.store.32_13364956070185332  ChromeUrlClientIncident.store  UrlBilling.store.4_13364956070195506  UrlCsdAllowlist.store  UrlCsdAllowlist.store.4_13364956070199725  UrlCsdDownloadAllowlist.store  (+7 more)
deprecated/: 2048_test.py  info.py  record.py  replay.py  test.py
src/: main.py
src/controllers/: configuration_controller.py
src/models/: configuration.py  project.py
src/utils/: record.py  undetected.py
src/views/: configuration_view.py  configuration_window.py  event_item.py  main_window.py  project_view.py
test_project/: recorded_events.json
(+554 files in other folders)
